--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-jshint": "~3.0.0",
     "grunt-contrib-uglify": "~5.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-jscs": "~3.0.1",
     "grunt-jsduck": "~1.0.1"
   }
