--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-jscs": "~3.0.1",
     "grunt-jsduck": "~1.0.1"
+  },
+  "dependencies": {
+    "alertifyjs": "^1.13.1"
   }
 }
